# VirtualMachine

./: CMakeLists.txt  README.md  main.c  prog.txt
src/: App.java  Dictionnary.java  Instruction.java  InstructionAdd.java  InstructionCon.java  InstructionEql.java  InstructionInf.java  InstructionJmp.java  InstructionMod.java  InstructionSet.java  InstructionSub.java  Memory.java  Processor.java  virtual-processor.c  virtual-processor.h
src/processor/: Address.java  Dictionnary.java  Instruction.java  InstructionAdd.java  InstructionCon.java  InstructionEql.java  InstructionInf.java  InstructionJmp.java  InstructionMod.java  InstructionSet.java  InstructionSub.java  Memory.java  Operation.java  OperationAdd.java  OperationAnd.java  OperationCon.java  OperationEql.java  OperationInf.java  OperationJmp.java  OperationMod.java  OperationMov.java  OperationNot.java  OperationOr.java  OperationSet.java  OperationSub.java  OperationSup.java  Processor.java
src/processor/exception/: InvalidCodeTypeException.java  InvalidTypeOperationException.java
src/processor/operation/: InvalidCodeTypeException.java  Operation.java  OperationAdd.java  OperationCon.java  OperationEql.java  OperationInf.java  OperationJmp.java  OperationMod.java  OperationMov.java  OperationNot.java  OperationSet.java  OperationSub.java  OperationSup.java
src/processor/type/: Address.java  Bool.java  Boolean.java  Char.java  Character.java  InvalidTypeOperationException.java  Number.java  Type.java
test/: TestAddress.java
